<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="mx.iteso.ms.codigobarras.MainActivity"
    android:background="@drawable/bg_pos">

    <TextView
        android:id="@+id/login_authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:text="@string/login_auth" />

    <TextView
        android:id="@+id/lab_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_authentication"
        android:layout_marginStart="36dp"
        android:layout_marginTop="38dp"
        android:text="@string/str_login_username" />

    <EditText
        android:id="@+id/txt_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_authentication"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/lab_login_username"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lab_login_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/txt_login_username"
        android:text="@string/str_login_pass" />

    <EditText
        android:id="@+id/txt_login_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_login_username"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/lab_btn_login"
        android:layout_below="@+id/txt_login_pass"
        android:layout_alignStart="@+id/txt_login_pass"
        android:onClick="auth"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_btn_register"
        android:layout_alignBaseline="@+id/btn_login"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_toEndOf="@+id/login_authentication" />
</RelativeLayout>
